--- a/package.json
+++ b/package.json
@@ -1,22 +1,30 @@
 {
-  "name": "react-demo",
+  "name": "recipe-generator",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
+  "description": "AI-powered recipe generator using React and Google Gemini",
+  "author": "Bhavesh Sapkale",
+  "license": "MIT",
   "scripts": {
     "dev": "vite",
     "server": "node server.js",
+    "server:dev": "nodemon server.js",
+    "start": "node server.js",
+    "both": "concurrently \"npm run server:dev\" \"npm run dev\"",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "lint:fix": "eslint . --fix",
+    "preview": "vite preview",
+    "clean": "rm -rf node_modules dist .env.local"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "express-rate-limit": "^8.2.1",
     "lucide-react": "^0.561.0",
-    "openai": "^6.15.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
@@ -27,15 +35,30 @@
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
     "autoprefixer": "^10.4.22",
+    "concurrently": "^9.2.1",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "nodemon": "^3.1.11",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18",
     "vite": "npm:rolldown-vite@7.2.5"
   },
   "overrides": {
     "vite": "npm:rolldown-vite@7.2.5"
-  }
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
+  },
+  "keywords": [
+    "recipe",
+    "generator",
+    "ai",
+    "gemini",
+    "react",
+    "vite",
+    "tailwind"
+  ]
 }
